[project]
name = "workbench"
version = "0.1.0"
description = ""
authors = [
    {name = "Alex Kyllo", email = "alex.kyllo@gmail.com"},
]
dependencies = [
    "cookiecutter",
    "click",
]
requires-python = ">=3.8"
license = {text = "MIT"}

[project.urls]
homepage = ""

[tool]
[tool.pdm]
includes = ["cookiecutters/"]
[tool.pdm.scripts]
workbench = {call = "workbench.__main__:main"}

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
